# libdecaf

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DOCUMENTATION.md  IMPLEMENTACAO_E521.md  README.md  run_e521_tests.sh
docs/: README.md
docs/en/: 01-overview.md  02-architecture.md  03-project-structure.md  04-build-and-codegen.md  05-api.md  06-cryptography.md  07-security-and-testing.md  08-quickstart.md  README.md
docs/pt/: 01-visao-geral.md  02-arquitetura.md  03-estrutura-do-projeto.md  04-compilacao-e-geracao.md  05-api.md  06-criptografia.md  07-seguranca-e-testes.md  08-inicio-rapido.md  README.md
src/: CMakeLists.txt
src/e521/: CMakeLists.txt  decaf_tables.c
src/generator/: CMakeLists.txt  curve_data.py
src/generator/e521/: CMakeLists.txt
src/p521/: CMakeLists.txt  f_arithmetic.c
src/p521/arch_32/: f_impl.h
src/p521/arch_x86_64/: f_impl.c  f_impl.h
src/per_curve/: decaf_gen_tables.tmpl.c  eddsa.tmpl.c  scalar.tmpl.c
src/public_include/: decaf.tmpl.hxx
test/: e521_ref.py  ed521_vectors.h  meu_teste.c  penido_vectors.h  test_decaf.cxx  test_ed521.c  test_ed521_vectors.c  test_penido.c
